# sgr_cubes

./: Cargo.toml  README.md  build.rs
res/data/: block.toml
src/: atlas_tex.rs  block.rs  block_shader.wgsl  chunk.rs  ctx_winit.rs  generic_shader.wgsl  main.rs  palette_transcode.wgsl  selected_block_shader.wgsl  texture.rs  ui_generic_shader.wgsl  ui_overlaid_shader.wgsl  wctx.rs
src/res/data/: blocks.toml
src/wctx/: atlas_tex.rs  block.rs  block_loader.rs  camera.rs  chunk.rs  data_loader.rs  rotation_group.rs  texture.rs  ui.rs  world.rs  world_loader.rs  world_saver.rs
src/wctx/ui/: world_ui.rs
texsource/: colormap.xcf
