[package]
name = "sgr_cubes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = "22.0"
pollster = "0.3"
bytemuck = { version = "1.16", features = [ "derive" ] }
ndarray = { version = "0.16.0", features = ["std", "serde"] }
cgmath = "0.18"
anyhow = "1.0"
num = "0.4.3"
figment = { version = "0.10.19", features = ["toml"] }
serde = { version = "1.0.208", features = ["std", "derive", "serde_derive"] }
toml = "0.8.19"
ilattice = "0.4.0"
grid-ray = { git = "https://github.com/bonsairobo/ilattice-rs/" }
glam = "0.28.0"
cushy = "0.4.0"
figures = "0.4.0"
serde-pickle = "1.1.1"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
